# agent-framework-benchmark

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  shared_context_analysis.md
articles/: 01-benchmark-results.md  02-benchmark-methodology.md  03-decision-guide.md
articles/linkedin/: post-1-results-hook.md  post-2-contrarian-standalone.md  post-3-methodology.md  post-4-decision-guide.md
docs/plans/: 2026-02-15-article-series-design.md  2026-02-15-article-series-plan.md
examples/: two_patterns.py
notebooks/: analysis.ipynb
results/: benchmark_results.csv
scripts/: regenerate_figures.py
src/agents_sdk_impl/: __init__.py  agents.py  pipeline.py
src/autogen_impl/: __init__.py  agents.py  workflow.py
src/benchmark/: __init__.py  metrics.py  providers.py  reporter.py  runner.py
src/crewai_impl/: __init__.py  agents.py  crew.py  tasks.py
src/eval_core/: __init__.py  judge.py  reporter.py  schemas.py
src/eval_core/metrics/: __init__.py  base.py  quality.py
src/langgraph_impl/: __init__.py  graph.py  nodes.py  state.py
src/llm_core/: __init__.py  config.py  retry.py
src/llm_core/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
src/msagent_impl/: __init__.py  agents.py  workflow.py
src/shared/: __init__.py  config.py  prompts.py  schemas.py  tools.py
tests/test_benchmark/: test_runner.py
tests/test_eval_core/: test_judge.py  test_metrics.py
tests/test_shared/: test_config.py  test_prompts.py  test_schemas.py  test_tools.py
